<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_share"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.forksystem.constituicao.fragment.ShareFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:text="@string/developer"
            android:textSize="18sp"
            android:textColor="@color/md_black_1000_75"
            style="@style/DetalheFontStyle"
            />

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/autor"
            android:textColor="@color/md_black_1000_75"
            android:textSize="18sp"
            style="@style/DetalheFontStyle" />

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:text="@string/share_mensagem"
        android:textSize="18sp"
        android:textColor="@color/md_black_1000_75"
        style="@style/DetalheFontStyle" />

        <Button
            android:id="@+id/share_facebook"
            android:text="@string/facebook"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_width="176dp"
            android:layout_height="60dp"
            android:background="@drawable/facebook"
            android:shadowColor="#F0F0F0"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5" />
    </LinearLayout>




</LinearLayout>
