
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomshetLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.forksystem.constituicao.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:id="@+id/bottomsheetDetalhe">

            <Button
                android:id="@+id/detalhe_copiar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_copiar"
                android:padding="16dp"
                android:layout_margin="8dp"/>

            <Button
                android:id="@+id/detalhe_compartilhar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_margin="8dp"
                android:text="@string/compartilhar_barra"/>

            <Button
                android:id="@+id/detalhe_marcar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_margin="8dp"
                android:text="@string/text_favorito"/>

        </LinearLayout>
    </ScrollView>

</android.support.v4.widget.NestedScrollView>